--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -30,8 +30,8 @@ dependencies = [
     "numpydoc==1.5.0",
     "sphinx-copybutton==0.5.1",
     "build>= 0.10.0",
-    "sphinx.autoapi",
-    "sphinx.jinja",
+    "sphinx-autoapi==2.1.1",
+    "sphinx-jinja==2.0.2",
 ]
 
 [tool.flit.module]
