--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -26,23 +26,23 @@ concurrency:
 
 jobs:
 
-  style:
-    name: Code style
-    runs-on: ubuntu-latest
-    steps:
-      - name: PyAnsys code style checks
-        uses: ansys/actions/code-style@v4
-        with:
-          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  # style:
+  #   name: Code style
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: PyAnsys code style checks
+  #       uses: ansys/actions/code-style@v4
+  #       with:
+  #         python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
-  docs-style:
-    name: Documentation Style Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: PyAnsys documentation style checks
-        uses: ansys/actions/doc-style@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+  # docs-style:
+  #   name: Documentation Style Check
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: PyAnsys documentation style checks
+  #       uses: ansys/actions/doc-style@v4
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
 
   create-docstrings:
     name: Create docstrings
