--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -26,14 +26,14 @@ concurrency:
 
 jobs:
 
-  style:
-    name: Code style
-    runs-on: ubuntu-latest
-    steps:
-      - name: PyAnsys code style checks
-        uses: ansys/actions/code-style@v4
-        with:
-          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  # style:
+  #   name: Code style
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: PyAnsys code style checks
+  #       uses: ansys/actions/code-style@v4
+  #       with:
+  #         python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
   # docs-style:
   #   name: Documentation Style Check
@@ -47,7 +47,6 @@ jobs:
   create-docstrings:
     name: Create docstrings
     runs-on: ubuntu-latest
-    needs: [style]
     container:
       image: ghcr.io/ansys/mechanical:23.2.0
       options: --entrypoint /bin/bash
