--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -66,9 +66,6 @@ jobs:
           apt install -y python3.8-venv
           pip3 install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip3 install --upgrade pip flit
-      - name: Install mechanical-stubs dependencies
-        run: |
-          pip install -e .
 
       - name: Run main.py
         env:
@@ -82,6 +79,14 @@ jobs:
           NUM_CORES: 1
         run: |
             python main.py
+      
+      - name: Install mechanical-stubs dependencies
+        run: |
+          cd package && pip install -e .
+
+      - name: Make Sphinx Docs
+        run: |
+          cd doc && make html
 
   # docs:
   #   name: Documentation
