change python to python3

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -78,7 +78,7 @@ jobs:
           AWP_ROOT232: /install/ansys_inc/v232
           NUM_CORES: 1
         run: |
-            python main.py
+            python3 main.py
       
       - name: Install mechanical-stubs dependencies
         run: |
