--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,9 @@
 repos:
 
-- repo: https://github.com/psf/black
-  rev: 23.7.0
-  hooks:
-  - id: black
+# - repo: https://github.com/psf/black
+#   rev: 23.7.0
+#   hooks:
+#   - id: black
 
 - repo: https://github.com/adamchainz/blacken-docs
   rev: 1.16.0
@@ -15,6 +15,7 @@ repos:
   rev: 5.12.0
   hooks:
   - id: isort
+    args: ["--profile", "black"]
 
 # - repo: https://github.com/PyCQA/flake8
 #   rev: 6.1.0
@@ -25,3 +26,11 @@ repos:
   rev: v2.2.5
   hooks:
   - id: codespell
+
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.4.0
+  hooks:
+  - id: check-merge-conflict
+  - id: debug-statements
+  - id: check-yaml
+  - id: trailing-whitespace
