--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "flit_core.buildapi"
 [project]
 # Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
 name = "ansys-mechanical-stubs"
-version = "0.1.dev0"
+version = "0"
 description = "PyMechanical scripting API stubs."
 readme = "README.rst"
 requires-python = ">=3.9"
