--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -66,10 +66,7 @@ jobs:
           apt install -y python3.8-venv
           pip3 install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip3 install --upgrade pip flit
-
-      - name: Install mechanical-stubs dependencies
-        run: |
-          cd package && pip install -e .
+          pip3 install -e ./package
 
       - name: Run main.py
         env:
