--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -66,6 +66,7 @@ jobs:
           apt install -y python3.8-venv
           pip3 install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip3 install --upgrade pip flit
+          pip3 install ansys-pythonnet
 
       # - name: Install package
       #  run: |
