--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -84,12 +84,23 @@ jobs:
           AWP_ROOT232: /install/ansys_inc/v232
           NUM_CORES: 1
         run: |
-            python3 main.py
-        continue-on-error: True 
+            python3 main.py > main_output.txt || true
+            cat main_output.txt
+            #
+            # Check if failure occurred
+            #
+            output=$(grep -c "Done creating all Mechanical stubs" main_output.txt || true)
+            if [ $output -eq 0 ]; then
+              echo "main.py execution succeeded"
+              exit 0
+            else
+              echo "main.py execution failed"
+              exit 1
+            fi
       
       - name: Make Sphinx Docs
         run: |
-          cd doc && make html
+          cd ./package/doc && make html
   # docs:
   #   name: Documentation
   #   needs: [docs-style]
