--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -70,10 +70,6 @@ jobs:
           pip3 install ansys-pythonnet
           pip3 install sphinx
 
-      # - name: Install package
-      #  run: |
-      #    cd package && pip install -e .
-
       - name: Run main.py
         env:
           LICENSE_SERVER: ${{ secrets.LICENSE_SERVER }}
@@ -87,6 +83,10 @@ jobs:
         run: |
             python3 main.py
         continue-on-error: True
+
+      - name: Install package
+        run: |
+          cd package && pip install -e .
       
       - name: Make Sphinx Docs
         run: |
