--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -88,88 +88,9 @@ jobs:
         run: |
           cd package && pip install -e .
       
-      - name: Make Sphinx Docs
-        run: |
-          cd ./package/doc && make html
-  # docs:
-  #   name: Documentation
-  #   needs: [docs-style]
-  #   runs-on: public-ubuntu-latest-8-cores
-  #   steps:
-  #     - name: Login in Github Container registry
-  #       uses: docker/login-action@v2
-  #       with:
-  #         registry: ghcr.io
-  #         username: ${{ github.actor }}
-  #         password: ${{ secrets.GITHUB_TOKEN }}
-
-  #     - name: Pull, launch, and validate Mechanical service
-  #       env:
-  #         LICENSE_SERVER: ${{ secrets.LICENSE_SERVER }}
-  #         MECHANICAL_IMAGE: ${{ env.DOCKER_PACKAGE }}:${{ env.DOCKER_IMAGE_VERSION }}
-  #       run: |
-  #         echo CPU info
-  #         lscpu
-  #         docker pull ${{ env.MECHANICAL_IMAGE }}
-  #         docker run --restart always --name ${{ env.DOCKER_MECH_CONTAINER_NAME }} -e ANSYSLMD_LICENSE_FILE=1055@${{ env.LICENSE_SERVER }} -p ${{ env.PYMECHANICAL_PORT }}:10000 ${{ env.MECHANICAL_IMAGE }} > log.txt &
-  #         grep -q 'WB Initialize Done' <(timeout 60 tail -f log.txt)
-
-  #     - name: Run Ansys documentation building action
-  #       uses: ansys/actions/doc-build@v4
-  #       with:
-  #         python-version: ${{ env.MAIN_PYTHON_VERSION }}
-  #         dependencies: "pandoc"
-
-  #     - name: Get Mechanical container logs
-  #       if: always()
-  #       run: docker logs ${{ env.DOCKER_MECH_CONTAINER_NAME }} > mechanical_documentation_log.txt 2>&1
-
-  #     - name: Upload container logs
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: mechanical_documentation_log
-  #         path: mechanical_documentation_log.txt
-  #         retention-days: 7
-
-  # release:
-  #   name: Release project
-  #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-  #   needs: [package]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Release to the public PyPI repository
-  #       uses: ansys/actions/release-pypi-public@v4
-  #       with:
-  #         library-name: ${{ env.PACKAGE_NAME }}
-  #         twine-username: "__token__"
-  #         twine-token: ${{ secrets.PYPI_TOKEN }}
-
-  #     - name: Release to GitHub
-  #       uses: ansys/actions/release-github@v4
-  #       with:
-  #         library-name: ${{ env.PACKAGE_NAME }}
-
-  # upload_dev_docs:
-  #   name: Upload dev documentation
-  #   if: github.ref == 'refs/heads/main'
-  #   runs-on: ubuntu-latest
-  #   needs: [package]
-  #   steps:
-  #     - name: Deploy the latest documentation
-  #       uses: ansys/actions/doc-deploy-dev@v4
-  #       with:
-  #         cname: ${{ env.DOCUMENTATION_CNAME }}
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-
-  # upload_docs_release:
-  #   name: Upload release documentation
-  #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-  #   runs-on: ubuntu-latest
-  #   needs: [release]
-  #   steps:
-  #     - name: Deploy the stable documentation
-  #       uses: ansys/actions/doc-deploy-stable@v4
-  #       with:
-  #         cname: ${{ env.DOCUMENTATION_CNAME }}
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         python-version: ${{ env.MAIN_PYTHON_VERSION }}
+      - name: Run Ansys documentation building action
+        uses: ansys/actions/doc-build@v4
+        with:
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+          dependencies: "pandoc"
+  
