--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -94,7 +94,7 @@ jobs:
 
       - name: Run Ansys documentation building action
         env:
-          PYTHONPATH: /__t/Python/3.10.12/x64/bin/pip
+          PYTHON_PATH: /__t/Python/3.10.12/x64/bin/pip
         uses: ansys/actions/doc-build@v4
         with:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
