--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -57,7 +57,9 @@ jobs:
         python-version: ['3.10']
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Install Git and checkout project
+        uses: actions/checkout@v3
+        
       - name: Install dependencies
         run: |
           apt update
@@ -65,37 +67,50 @@ jobs:
           apt install -y python3-pip
           apt install -y python3.8-venv
           apt install -y mono-complete
-          apt install -y sudo
-          apt install -y curl
-          apt install -y wget
-          apt install -y apt-utils
           pip3 install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip3 install --upgrade pip flit
           pip3 install ansys-pythonnet
           pip3 install sphinx
 
-      #- name: Run main.py
-      #  env:
-      #    LICENSE_SERVER: ${{ secrets.LICENSE_SERVER }}
-      #    ANSYSCL232_DIR: /install/ansys_inc/v232/licensingclient
-      #    ANSYSLMD_LICENSE_FILE: 1055@${{ secrets.LICENSE_SERVER }}
-      #    ANSYS_WORKBENCH_LOGGING_CONSOLE: 0
-      #    ANSYS_WORKBENCH_LOGGING: 0
-      #    ANSYS_WORKBENCH_LOGGING_FILTER_LEVEL: 2
-      #    AWP_ROOT232: /install/ansys_inc/v232
-      #    NUM_CORES: 1
-      #  run: |
-      #      python3 main.py
-      #  continue-on-error: True
+      - name: Run main.py
+        env:
+          LICENSE_SERVER: ${{ secrets.LICENSE_SERVER }}
+          ANSYSCL232_DIR: /install/ansys_inc/v232/licensingclient
+          ANSYSLMD_LICENSE_FILE: 1055@${{ secrets.LICENSE_SERVER }}
+          ANSYS_WORKBENCH_LOGGING_CONSOLE: 0
+          ANSYS_WORKBENCH_LOGGING: 0
+          ANSYS_WORKBENCH_LOGGING_FILTER_LEVEL: 2
+          AWP_ROOT232: /install/ansys_inc/v232
+          NUM_CORES: 1
+        run: |
+            python3 main.py
+        continue-on-error: True
 
-      # - name: Install package
-      #  run: |
-      #    cd package && pip install -e .
+      - name: Install package
+        run: |
+          cd package && pip install -e .
 
-      - name: Run Ansys documentation building action
-        uses: ansys/actions/doc-build@v4
+      - name: Retrieve Mechanial version
+        run: |
+          echo "MECHANICAL_VERSION=$(python -c 'from Ansys import __version__; print(__version__)')" >> $GITHUB_ENV
+          echo "Mechanical version is: $(python -c "from Ansys import __version__; print(__version__)")"
+        id: version
+
+      - name: Cache docs build directory
+        uses: actions/cache@v3
         with:
-          use-python-cache: False
-          python-version: ${{ env.MAIN_PYTHON_VERSION }}
-          dependencies: "pandoc"
-  
+          path: doc/_build
+          key: doc-build-v${{ env.RESET_DOC_BUILD_CACHE }}-${{ env.MECHANICAL_VERSION }}-${{ github.sha }}
+          restore-keys: |
+            doc-build-v${{ env.RESET_DOC_BUILD_CACHE }}-${{ env.MECHANICAL_VERSION }}
+
+      - name: Create Sphinx Documentation
+        run: |
+          cd doc && make html
+
+      - name: Upload HTML Documentation
+        uses: actions/upload-artifact@v3
+        with:
+          name: documentation-html
+          path: _build/html
+          retention-days: 7
