--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -92,25 +92,25 @@ jobs:
 
       - name: Retrieve Mechanial version
         run: |
-          echo "MECHANICAL_VERSION=$(python -c 'from Ansys import __version__; print(__version__)')" >> $GITHUB_ENV
-          echo "Mechanical version is: $(python -c "from Ansys import __version__; print(__version__)")"
+          echo "MECHANICAL_VERSION=$(python3 -c 'from Ansys import __version__; print(__version__)')" >> $GITHUB_ENV
+          echo "Mechanical version is: $(python3 -c "from Ansys import __version__; print(__version__)")"
         id: version
+
+      - name: Create Sphinx Documentation
+        run: |
+          cd ./package/doc && make html
 
       - name: Cache docs build directory
         uses: actions/cache@v3
         with:
-          path: doc/_build
+          path: package/doc/_build
           key: doc-build-v${{ env.RESET_DOC_BUILD_CACHE }}-${{ env.MECHANICAL_VERSION }}-${{ github.sha }}
           restore-keys: |
             doc-build-v${{ env.RESET_DOC_BUILD_CACHE }}-${{ env.MECHANICAL_VERSION }}
-
-      - name: Create Sphinx Documentation
-        run: |
-          cd doc && make html
 
       - name: Upload HTML Documentation
         uses: actions/upload-artifact@v3
         with:
           name: documentation-html
-          path: _build/html
+          path: package/doc/_build/html
           retention-days: 7
