--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -44,7 +44,7 @@ jobs:
   #       with:
   #         token: ${{ secrets.GITHUB_TOKEN }}
 
-  create-docstrings:
+  doc-build:
     name: Create docstrings
     runs-on: ubuntu-latest
     container:
@@ -114,3 +114,32 @@ jobs:
           name: documentation-html
           path: package/doc/_build/html
           retention-days: 7
+
+  doc-deploy:
+    name: Documentation deploy
+    runs-on: ubuntu-latest
+    needs: [doc-build]
+
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: documentation-html
+          path: documentation-html
+
+      - name: List all files
+        run: ls -R .
+
+      - name: Deploy to GitHub Pages
+        if: contains(github.ref, 'refs/heads/main')
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: documentation-html/
+          clean: true
+          single-commit: true
