--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -85,11 +85,13 @@ jobs:
           AWP_ROOT232: /install/ansys_inc/v232
           NUM_CORES: 1
         run: |
-            python3 main.py > results.txt
-            echo "VALID_RESULTS=$(cat results.txt)" >> $GITHUB_ENV
+          python3 main.py > results.txt
         continue-on-error: True
 
-      - name: Check results
+      - name: Get main.py results
+          echo "VALID_RESULTS=$(cat results.txt)" >> $GITHUB_ENV
+
+      - name: Check main.py results
         if: ${{ env.VALID_RESULTS }} == ""
         run: exit 1
 
