--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -88,13 +88,19 @@ jobs:
           python3 main.py > results.txt
         continue-on-error: True
 
-      - name: Get main.py results
-        run: |
-          echo "VALID_RESULTS=$(cat results.txt)" >> $GITHUB_ENV
-
       - name: Check main.py results
-        if: ${{ env.VALID_RESULTS }} == ""
-        run: exit 1
+        run: |
+          cat results.txt
+
+          # Check if failure occurred
+          output=$(grep -c "Done processing all mechanical stubs" results.txt || true)
+          if [ $output -eq 0 ]; then
+            echo "All mechanical stubs were created"
+            exit 0
+          else
+            echo "There was an issue creating the mechanical stubs"
+            exit 1
+          fi
 
       - name: Install package
         run: |
