--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -8,7 +8,7 @@ name = "ansys-mechanical-stubs"
 version = "0"
 description = "PyMechanical scripting API stubs."
 readme = "README.rst"
-requires-python = ">=3.8"
+requires-python = ">=3.8,<4"
 license = {file = "LICENSE"}
 authors = [
     {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
