--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -82,7 +82,7 @@ jobs:
           ANSYS_WORKBENCH_LOGGING_CONSOLE: 0
           ANSYS_WORKBENCH_LOGGING: 0
           ANSYS_WORKBENCH_LOGGING_FILTER_LEVEL: 2
-          AWP_ROOT232: /install/ansys_inc/v232
+          AWP_ROOTDV_DEV: /install/ansys_inc/v232
           NUM_CORES: 1
         run: |
           python3 main.py > results.txt
