--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -139,7 +139,7 @@ jobs:
   smoke-tests:
     name: Build and Smoke tests
     runs-on: ${{ matrix.os }}
-    needs: [style]
+    needs: [style, doc-build]
     strategy:
       fail-fast: false
       matrix:
@@ -151,6 +151,10 @@ jobs:
           - should-release: false
             os: macos-latest
     steps:
+      - name: Install package
+        run: |
+          cd package
+
       - name: Build wheelhouse and perform smoke test
         uses: ansys/actions/build-wheelhouse@v4
         with:
