--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -67,7 +67,7 @@ jobs:
           apt update
           apt install -y lsb-release
           apt install -y python3-pip
-          apt install -y python3.8-venv
+          apt install -y python3.9-venv
           apt install -y mono-complete
           pip3 install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip3 install --upgrade pip flit
@@ -108,8 +108,8 @@ jobs:
 
       - name: Retrieve Mechanial version
         run: |
-          echo "MECHANICAL_VERSION=$(python3 -c 'from Ansys import __version__; print(__version__)')" >> $GITHUB_ENV
-          echo "Mechanical version is: $(python3 -c "from Ansys import __version__; print(__version__)")"
+          echo "MECHANICAL_VERSION=$(python3 -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
+          echo "Mechanical version is: $(python3 -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
         id: version
 
       - name: Cache docs build directory
