--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "ansys-sphinx-theme==0.13.1",
+    "ansys-sphinx-theme>=0.8.2",
     "flit>3.8.0",
     "sphinx-notfound-page==0.8.3",
     "numpydoc==1.5.0",
