--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -85,8 +85,9 @@ jobs:
           apt install -y mono-complete
           pip3 install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip3 install --upgrade pip flit
+          pip3 install ansys-pythonnet
+          pip3 install sphinx
 
-          cd package && pip3 install -e .
 
       - name: Run main.py
         env:
