--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -48,7 +48,7 @@ jobs:
   doc-build:
     name: Create docstrings
     needs: [style, doc-style]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     container:
       image: ghcr.io/ansys/mechanical:23.2.0
       options: --entrypoint /bin/bash
@@ -56,13 +56,7 @@ jobs:
       max-parallel: 2
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ['3.9', '3.10', '3.11', '3.12']
-        should-release:
-          - ${{ github.event_name == 'push' && contains(github.ref, 'refs/tags') }}
-        exclude:
-          - should-release: false
-            os: macos-latest
     steps:
       - name: Install Git and checkout project
         uses: actions/checkout@v3
@@ -80,14 +74,12 @@ jobs:
           python --version
           pip3 --version
 
-          apt update
           apt install -y lsb-release
           apt install -y mono-complete
           pip3 install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip3 install --upgrade pip flit
           pip3 install ansys-pythonnet
           pip3 install sphinx
-
 
       - name: Run main.py
         env:
@@ -152,14 +144,15 @@ jobs:
         uses: vimtor/action-zip@v1.1
         with:
           files: wheelhouse
-          dest: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}.zip
+          dest: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}.zip
 
       - name: "Upload the compressed wheelhouse"
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}
-          path: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-${{ matrix.os }}-${{ matrix.python-version }}.zip
+          name: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}
+          path: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}.zip
           retention-days: 7
+
 
   doc-deploy:
     name: Documentation deploy
