--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -98,7 +98,7 @@ jobs:
 
       - name: Install package
         run: |
-          pip install -e .
+          cd package && pip install -e .
 
       - name: Retrieve Mechanial version
         run: |
