--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -126,19 +126,19 @@ jobs:
         shell: bash
         run: |
           cd package
-          python -m pip wheel .[package] -w wheelhouse
+          python3 -m pip wheel .[package] -w wheelhouse
 
       - name: "Compress the wheelhouse"
         uses: vimtor/action-zip@v1.1
         with:
           files: wheelhouse
-          dest: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}.zip
+          dest: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-ubuntu-latest-3.9.zip
 
       - name: "Upload the compressed wheelhouse"
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}
-          path: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}.zip
+          name: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-ubuntu-latest-3.9
+          path: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-ubuntu-latest-3.9.zip
           retention-days: 7
 
 
