--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -104,7 +104,6 @@ jobs:
         run: |
           echo "MECHANICAL_VERSION=$(python3 -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
           echo "Mechanical version is: $(python3 -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
-        id: version
 
       - name: Create Sphinx Documentation
         run: |
@@ -132,15 +131,14 @@ jobs:
         uses: vimtor/action-zip@v1.1
         with:
           files: wheelhouse
-          dest: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-ubuntu-latest-3.9.zip
+          dest: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-3.9.zip
 
       - name: "Upload the compressed wheelhouse"
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-ubuntu-latest-3.9
-          path: ${{ env.PACKAGE_NAME }}-v${{ steps.version }}-wheelhouse-ubuntu-latest-3.9.zip
+          name: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-3.9
+          path: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-3.9.zip
           retention-days: 7
-
 
   doc-deploy:
     name: Documentation deploy
