--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -97,16 +97,28 @@ jobs:
             exit 1
           fi
 
-      - name: Install package
-        run: |
-          cd package && pip install -e .
-
       - name: Retrieve Mechanial version
         run: |
           echo "MECHANICAL_VERSION=$(python3 -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
           echo "Mechanical version is: $(python3 -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
 
-      - name: Create Sphinx Documentation
+      - name: Install package and create wheelhouse
+        run: |
+          cd package
+          pip3 install -e .
+          python3 -m pip install .[package]
+          python3 -m pip install importlib-metadata
+          python3 -m pip wheel .[package] -w wheelhouse
+          zip -r -j ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-3.9.zip wheelhouse/*
+
+      - name: "Upload the compressed wheelhouse"
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-3.9
+          path: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-3.9.zip
+          retention-days: 7
+
+      - name: Create Sphinx documentation
         run: |
           make -C package/doc html
 
@@ -120,22 +132,6 @@ jobs:
         with:
           name: documentation-html
           path: package/doc/_build/html
-          retention-days: 7
-
-      - name: "Generate the wheelhouse"
-        shell: bash
-        run: |
-          cd package
-          python3 -m pip install .[package]
-          python3 -m pip install importlib-metadata
-          python3 -m pip wheel .[package] -w wheelhouse
-          zip -r -j ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-3.9.zip wheelhouse/*
-
-      - name: "Upload the compressed wheelhouse"
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-3.9
-          path: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-3.9.zip
           retention-days: 7
 
   doc-deploy:
