add -y to dependency install

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -63,7 +63,7 @@ jobs:
           apt install -y python3-pip
           apt install -y python3.9-venv
           apt install -y mono-complete
-          apt-get install zip
+          apt-get install -y zip
           pip3 install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip3 install --upgrade pip flit
           pip3 install ansys-pythonnet
