--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -24,14 +24,30 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "ansys-sphinx-theme>=0.8.2",
     "flit>3.8.0",
-    "sphinx-notfound-page==0.8.3",
-    "numpydoc==1.5.0",
-    "sphinx-copybutton==0.5.1",
     "build>=0.10.0",
+    "colorama==0.4.6",
+    "charset-normalizer==3.3.2",
+]
+
+[project.optional-dependencies]
+doc = [
+    "ansys-sphinx-theme==0.13.1",
+    "autodoc_pydantic==2.0.1",
+    "jupyter_sphinx==0.5.3",
+    "nbsphinx==0.9.3",
+    "numpydoc==1.6.0",
+    "myst-parser==2.0.0",
+    "Sphinx==7.2.6",
     "sphinx-autoapi==3.0.0",
+    "sphinx-autodoc-typehints==1.25.2",
+    "sphinxcontrib-globalsubs==0.1.1",
+    "sphinxcontrib-httpdomain==1.8.1",
+    "sphinx-copybutton==0.5.2",
+    "sphinx_design==0.5.0",
     "sphinx-jinja==2.0.2",
+    "sphinx-notfound-page==0.8.3",
+    "sphinxnotes-strike==1.2",
 ]
 
 [tool.flit.module]
