install ansys-sphinx-theme in workflow

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -66,8 +66,7 @@ jobs:
           apt-get install -y zip
           pip3 install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           pip3 install --upgrade pip flit
-          pip3 install ansys-pythonnet
-          pip3 install sphinx
+          pip3 install ansys-pythonnet ansys-sphinx-theme sphinx
 
       - name: Run main.py
         env:
