--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -52,6 +52,9 @@ jobs:
     container:
       image: ghcr.io/ansys/mechanical:23.2.0
       options: --entrypoint /bin/bash
+    strategy:
+      matrix:
+        python-version: ['3.9']
     steps:
       - name: Install Git and checkout project
         uses: actions/checkout@v3
@@ -59,9 +62,19 @@ jobs:
       - name: Install dependencies
         run: |
           apt update
+          apt install --reinstall ca-certificates
+          apt install software-properties-common -y
+          add-apt-repository ppa:deadsnakes/ppa -y
+          apt install python${{ matrix.python-version }} -y
+          ln -s /usr/bin/python${{ matrix.python-version }} /usr/bin/python
+          apt install python${{ matrix.python-version }}-venv -y
+          python -m ensurepip --default-pip
+          pip3 install --upgrade pip
+          python --version
+          pip3 --version
+
+          apt update
           apt install -y lsb-release
-          apt install -y python3-pip
-          apt install -y python3.9-venv
           apt install -y mono-complete
           apt-get install -y zip
           pip3 install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
