add documentation line to pyproject.toml

--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -58,3 +58,4 @@ name = "ansys.mechanical.stubs"
 Source = "https://github.com/ansys-internal/mechanical-stubs/"
 Tracker = "https://github.com/ansys-internal/mechanical-stubs/issues"
 Homepage = "https://github.com/ansys-internal/mechanical-stubs"
+Documentation = "https://flit.readthedocs.io/en/latest/" 
