--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -95,8 +95,7 @@ jobs:
           AWP_ROOTDV_DEV: /install/ansys_inc/v232
           NUM_CORES: 1
         run: |
-          pip install pythonnet
-          python3 main.py > results.txt
+          python main.py > results.txt
         continue-on-error: True
 
       - name: Check main.py results
@@ -117,15 +116,15 @@ jobs:
         run: |
           cd package
           pip install -e .
-          echo "MECHANICAL_VERSION=$(python3 -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
-          echo "Mechanical version is: $(python3 -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
+          echo "MECHANICAL_VERSION=$(python -c 'from ansys.mechanical.stubs import __version__; print(__version__)')" >> $GITHUB_ENV
+          echo "Mechanical version is: $(python -c "from ansys.mechanical.stubs import __version__; print(__version__)")"
 
       - name: Install package and create wheelhouse
         run: |
           cd package
-          python3 -m pip install .[package]
-          python3 -m pip install importlib-metadata
-          python3 -m pip wheel .[package] -w wheelhouse
+          python -m pip install .[package]
+          python -m pip install importlib-metadata
+          python -m pip wheel .[package] -w wheelhouse
           zip -r -j ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-3.9.zip wheelhouse/*
 
       - name: "Upload the compressed wheelhouse"
