--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -126,21 +126,18 @@ jobs:
           python -m pip install .[package]
           python -m pip install importlib-metadata
           python -m pip wheel .[package] -w wheelhouse
-          # echo "Zipping wheelhouse ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}.zip"
-          # zip -r -j ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}.zip wheelhouse/*
+
+      - name: "Compress the wheelhouse"
+        uses: vimtor/action-zip@v1.1
+        with:
+          files: wheelhouse
+          dest: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}.zip
 
       - name: "Upload the compressed wheelhouse"
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-3.9
-          path: package/${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-3.9.zip
-          retention-days: 7
-
-      - name: "Upload the wheel"
-        uses: actions/upload-artifact@v4
-        with:
-          name: ansys_mechanical_stubs-0-py3-none-any.whl
-          path: tmp/ansys_mechanical_stubs-0-py3-none-any.whl
+          name: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}
+          path: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}.zip
           retention-days: 7
 
       - name: Create Sphinx documentation
