--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -130,7 +130,7 @@ jobs:
       - name: "Compress the wheelhouse"
         uses: vimtor/action-zip@v1.1
         with:
-          files: wheelhouse
+          files: ./wheelhouse
           dest: ${{ env.PACKAGE_NAME }}-v${{ env.MECHANICAL_VERSION }}-wheelhouse-ubuntu-latest-${{ matrix.python-version }}.zip
 
       - name: "Upload the compressed wheelhouse"
