--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -96,6 +96,7 @@ jobs:
           AWP_ROOTDV_DEV: /install/ansys_inc/v232
           NUM_CORES: 1
         run: |
+          pip install ansys-pythonnet
           python main.py > results.txt
         continue-on-error: True
 
