--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -46,7 +46,6 @@ dependencies = [
 doc = [
     "ansys-sphinx-theme==0.13.2",
     "autodoc_pydantic==2.0.1",
-    "GitPython==3.1.41",
     "jupyter_sphinx==0.5.3",
     "nbsphinx==0.9.3",
     "numpydoc==1.6.0",
@@ -58,6 +57,7 @@ doc = [
     "sphinx-copybutton==0.5.2",
     "sphinx_design==0.5.0",
     "sphinx-jinja==2.0.2",
+    "sphinx-markdown-builder==0.6.6",
     "sphinxnotes-strike==1.2.1",
 ]
 
