--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 dependencies = [
     "build==1.0.3",
     "certifi==2024.2.2",
-    "charset_normalizer==3.3.2",
+    # "charset_normalizer==3.3.2",
     "colorama==0.4.6",
     "docutils==0.20.1",
     "flit_core==3.9.0",
